--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Motivation, HTML5, ReactJS, Machine Learing, Python, Sleeping
-percentage: 100, 35, 65, 80, 70, 90, 50
+aspects: Python, Perl, Embedded C, PyTorch, Machine Learing, Computer Vision, TensorFlow
+percentage: 80, 80, 90, 60, 60, 90, 50
