--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -1,26 +1,26 @@
-# blog page sections
-- name: Blog
-  href: /blog/
+# # blog page sections
+# - name: Blog
+#   href: /blog/
 
-# edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
-- name: Python
-  href: /python/
+# # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
+# - name: Python
+#   href: /python/
 
-- name: Linux
-  href: /linux/
+# - name: Linux
+#   href: /linux/
 
-- name: HTML
-  href: /html/
+# - name: HTML
+#   href: /html/
 
-- name: Database
-  href: /database/
+# - name: Database
+#   href: /database/
 
-- name: Mac
-  href: /mac/
+# - name: Mac
+#   href: /mac/
 
-- name: Life
-  href: /life/
+# - name: Life
+#   href: /life/
 
-# Don't display donation page: change donation to off at file '_config.yml'
-- name: Donate
-  href: /donate/
+# # Don't display donation page: change donation to off at file '_config.yml'
+# - name: Donate
+#   href: /donate/
